--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
     border-radius: 1rem;
     max-width: 100%;
     align-items: center;
+    box-shadow: 0px 15px 14px hsl(224deg 23% 55% / 39%);
 }
 
 .purchase-card__image{
