--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ body{
     border-radius: 1rem;
     max-width: 100%;
     align-items: center;
-    box-shadow: 0px 15px 14px hsl(224deg 23% 55% / 39%);
+    box-shadow: 0px 15px 14px hsla(224, 23%, 55%, 0.315);
 }
-
+ 
 .purchase-card__image{
     width: 100%;
     height: auto;
